--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,3 +1,7 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 @font-face {
   font-family: "pretendar";
   src: url("./assets/fonts/Pretendar.ttf") format("truetype");
