--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -6,6 +6,16 @@
   font-family: "pretendar";
   src: url("./assets/fonts/Pretendar.ttf") format("truetype");
 }
+@font-face {
+  font-family: "bmjua";
+  src: url("./assets/fonts/BMJUA.ttf") format("truetype");
+}
+.font-bmjua {
+  font-family: "bmjua", pretendar, Arial;
+}
+.w-100 {
+  width: 90%;
+}
 body {
   font-family: "pretendar", Arial;
 }
