--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -19,3 +19,10 @@
 body {
   font-family: "pretendar", Arial;
 }
+.hover-scale {
+  transition: transform 0.3s ease;
+}
+
+.hover-scale:hover {
+  transform: scale(1.05);
+}
