--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -10,8 +10,15 @@
   font-family: "bmjua";
   src: url("./assets/fonts/BMJUA.ttf") format("truetype");
 }
+@font-face {
+  font-family: "passion";
+  src: url("./assets/fonts/Passion.ttf") format("truetype");
+}
 .font-bmjua {
   font-family: "bmjua", pretendar, Arial;
+}
+.font-passion {
+  font-family: "passion", pretendar, Arial;
 }
 .w-100 {
   width: 90%;
