design : 로그인 화면 div틀 디자인

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -23,6 +23,11 @@
 .w-100 {
   width: 90%;
 }
+.colLine::after {
+  content: "";
+  border-left: 1px solid #f3f3f6;
+  height: 100%;
+}
 body {
   font-family: "pretendar", Arial;
 }
