--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -60,3 +60,9 @@ body {
 .shake {
   animation: shakeAnimation 0.4s ease-in-out;
 }
+
+@layer utilities {
+  .pl-percent-13 {
+    padding-left: 13%;
+  }
+}
