--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -66,3 +66,17 @@ body {
     padding-left: 13%;
   }
 }
+
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: pre-line;
+  max-height: 170px; /* 최대 높이 설정 */
+}
+
+.ellipsis-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-height: 32px; /* 최대 높이 설정 */
+}
